# CVML

./: .gitignore  README.md
Mosaic/: CMakeLists.txt  colorHistVector.cpp  colorHistVector.h  list.txt  main.cpp  util.cpp  util.h
PedestrianDetection/: README.md
PedestrianDetection/caffe-master-project/data/pedestrian/: train.txt  val.txt
PedestrianDetection/caffe-master-project/project/pedestrian/: create_pedenet.sh  make_pedenet_mean.sh  solver.prototxt  train_pedenet.sh  train_val.prototxt
PedestrianDetection/fast-rcnn/data/cache/: INRIATrain_gt_roidb.pkl
PedestrianDetection/fast-rcnn/lib/datasets/: __init__.py  caltech.py  factory.py
PedestrianDetection/fast-rcnn/models/CaffeNet/: solver.prototxt
PedestrianDetection/fast-rcnn/tools/: demo.py  demo_INRIA.py  demo_ammeter.py  test_INRIA.py  test_INRIAbackup.py
